<resources>
    <string name="app_name">AudioBitts</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_my_bitts">My Bitts</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_rate_us">Rate Us</string>
    <string name="menu_tell_a_friend">Tell a Friend</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_signup">SignUp</string>

    <string name="menu_open">Open Menu</string>
    <string name="menu_close">Close Menu</string>

    <string name="hi_guest">Hi, Guest!</string>

    <string name="parse_server_url">http://audiobits.us-east-1.elasticbeanstalk.com/parse</string>
    <string name="parse_app_id">tKgmfirf66vcdEO5fl7fkS1i5OS5R4mPL5O1fhmq</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
